# LCube

./: PCB.dxf  README.md  RTC.c  RTC.h
lCube/: CMakeLists.txt  sdkconfig  sdkconfig.old
lCube/components/: AXP2101.c  CMakeLists.txt  LED.c  TimeStamp.c  WIFI.c
lCube/components/AMOLED/: CMakeLists.txt  esp_lcd_co5300.c  esp_lcd_co5300_spi.c  esp_lcd_touch_cst820.c  panel.c
lCube/components/AMOLED/includes/: esp_lcd_touch.h  panel.h
lCube/components/PMIC/: AXP2101.c  AXP2101.h  CMakeLists.txt  IO_PIN_NUM.h
lCube/components/PMIC/include/: AXP2101.h
lCube/components/PMIC/private_include/: AXP2101Constants.h
lCube/components/includes/: AXP2101.h  IO_PIN_NUM.h  LED.h  TimeStamp.h  WIFI.h
lCube/main/: Pin_Definitions.h  main.c
lCube/main/components/PMIC/: AXP2101.c  CMakeLists.txt
model/: 1Keys.f3d  CUBE2025年5月31日.f3d  KEY内凹.f3d  Keys_print_1.stl  case_print_1.stl  cube2025年6月14日.f3d  亚克力背板.dxf  草图17亚克力背板.dxf
model/printed/: 1.2025年6月21日print.stl  1KEY内凹.stl  2dayin10.5.stl  2print10.00mm.stl  3print11.00.stl
